--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Odeh <abuzaid163@hotmail.com>"]
 python = "^3.9"
 black = "^21.10b0"
 flake8 = "^4.0.1"
+pyenchant = "^3.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
